# endorama.github.io

./: .gitmodules  404.html  config.toml  index.html  index.xml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
2022/2ami/: index.html
2022/asdf-little-awesome-tool/: index.html
2022/bring-out-the-trash/: index.html
2022/golang-divisions/: index.html
2022/golang-string-comparison-benchmark/: index.html
2022/hello-world/: index.html
2022/making-your-shell-scripts-bulletproof/: index.html
2022/making-your-shell-scripts-bulletproof-pt.2/: index.html
2022/recovery-metadata-from-pdf/: index.html
2022/stop-observing-start-making/: index.html
about/: index.html
archetypes/: default.md
categories/: index.html  index.xml
contact-me/: index.html
content/about/: index.md
content/contact-me/: index.md
content/now/: index.md
content/pages/: foo.md
content/posts/: 2ami.md  asdf-little-awesome-tool.md  bring-out-the-trash.md  golang-divisions.md  golang-string-comparison-benchmark.md  hello-world.md  making-your-shell-scripts-bulletproof-2.md  making-your-shell-scripts-bulletproof.md  recovery-metadata-from-pdf.md  stop-observing-start-making.md  to-make-or-not-to-make.md
css/: override.css  post-share.css
layouts/: index.html
layouts/partials/: headline-hash.html  list-posts.html  list.html  post-share.html  post.html
layouts/shortcodes/: tenor.html  tip.html
now/: index.html
posts/: index.html  index.xml
posts/hello-world/: index.html
static/: CNAME
tags/: index.html  index.xml
tags/cli/: index.xml  (+1 more)
tools/: touch.py
(+46 files in other folders)
